--- a/mp/src/game/client/client_hl2mp.vcxproj.filters
+++ b/mp/src/game/client/client_hl2mp.vcxproj.filters
@@ -1943,6 +1943,9 @@
     <ClInclude Include="toolframework_client.h">
       <Filter>Tool Framework</Filter>
     </ClInclude>
+    <ClInclude Include="IMyPanel.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="mp3player.cpp">
@@ -3507,6 +3510,9 @@
     </ClCompile>
     <ClCompile Include="..\shared\hl2mp\weapon_ak47.cpp">
       <Filter>Source Files\HL2MP\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="MyPanel.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
